# realit-singer-encodings

./: CHANGELOG.md  README.md  pylintrc  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  pythonpublish.yml
singer_encodings/: compression.py  csv.py  csv_helper.py  json_schema.py
tests/: test_csv.py  test_empty_schema.py  test_sample_file.py
